# OpenEncroachment

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  datasette.yaml  docker-compose.yml  env.template  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: dispatcher.yaml  settings.yaml
data/aerial/: sample1.ppm
data/gps/: gps_events.csv
data/ground/: ground_sensors.csv
data/social/: sample_social.csv  training_social.csv
docs/: api.md  deployment.md
schemas/: envelope.schema.json
scripts/: run_api.sh  run_pipeline.sh
src/open_encroachment/: __init__.py  api.py  cli.py  config.py  pipeline.py
src/open_encroachment/agents/: agent.py  cli.py  tools.py
src/open_encroachment/analytics/: predictive.py
src/open_encroachment/case_management/: case_manager.py
src/open_encroachment/comms/: dispatcher.py  webhook.py
src/open_encroachment/evidence/: chain_of_custody.py
src/open_encroachment/fusion/: fusion_engine.py
src/open_encroachment/geofencing/: __init__.py  geofence_manager.py
src/open_encroachment/gps/: tracking.py
src/open_encroachment/ingestion/: aerial.py  ground_sensors.py  satellite.py  social_media.py
src/open_encroachment/models/: schemas.py  severity.py  threat_classifier.py
src/open_encroachment/nlp/: nlp_engine.py
src/open_encroachment/utils/: geo.py  io.py
tests/: test_agent.py  test_api.py  test_case_manager_workflow.py  test_cli_agent_help.py  test_cli_case_predict.py  test_cli_pipeline.py  test_dispatch_envelope.py  test_dispatcher_config_hook.py  test_geo.py  test_geofence_manager.py  test_imports.py  test_models.py  test_pipeline_smoke.py  test_pipeline_validation.py
tests/ledger/: test_verify.py
